--- a/scss/_homeBusiness-new.scss
+++ b/scss/_homeBusiness-new.scss
@@ -262,8 +262,9 @@ span {
     }
     &.mid-size-bold {
         font-size: 1.5em;
-        font-family: 'Roboto-Black', sans-serif;
+        font-family: 'Roboto', sans-serif;
         margin-bottom: 10px;
+        font-weight: 900;
         @media (min-width: 1024px) {
             font-size: 2em;
         }
